[IMP] 修改 Windows 路径导致图片不显示

--- a/docs/并发编程.md
+++ b/docs/并发编程.md
@@ -8,7 +8,7 @@
 
 #### 2.ThreadPoolExecutor
 
-![image-20220603213115117](C:\Users\Liyohe\Documents\workspace\github\java-series-juc\docs\images\image-20220603213115117.png)
+![image-20220603213115117](./images/image-20220603213115117.png)
 
 ##### 1）线程池状态
 
@@ -54,7 +54,7 @@ private static int ctlOf(int rs,int wc){return rs|wc;}
 
 工作方式：
 
-![image-20220603221234446](C:\Users\Liyohe\Documents\workspace\github\java-series-juc\docs\images\image-20220603221234446.png)
+![image-20220603221234446](./images/image-20220603221234446.png)
 
 - 线程池中刚开始没有线程，当一个任务提交给线程池后，线程池会创建一个新线程来执行任务。
 
@@ -77,7 +77,7 @@ private static int ctlOf(int rs,int wc){return rs|wc;}
 
 - 当高峰过去后，超过corePoolSize 的救急线程如果一段时间没有任务做，需要结束节省资源，这个时间由keepAliveTime 和 unit 来控制。
 
-  ![image-20220603222838520](C:\Users\Liyohe\Documents\workspace\github\java-series-juc\docs\images\image-20220603222838520.png)
+  ![image-20220603222838520](./images/image-20220603222838520.png)
 
   根据这个构造方法，JDK Executors 类中提供了众多工厂方法来创建各种用途的线程池
 
