[IMP] ThreadPoolExecutor 内容

--- a/docs/并发编程.md
+++ b/docs/并发编程.md
@@ -62,9 +62,7 @@ private static int ctlOf(int rs,int wc){return rs|wc;}
 
 - 如果队列选择了有界队列，那么任务超过了队列大小时，会创建 maximumPoolSize - corePoolSize 数目的线程来救急。
 
-- 如果线程到达 maximumPoolSize 仍然有新任务这时会执行拒绝策略。拒绝策略 jdk 提供了 4 种实现，其它
-
-- 著名框架也提供了实现
+- 如果线程到达 maximumPoolSize 仍然有新任务这时会执行拒绝策略。拒绝策略 jdk 提供了 4 种实现，其它著名框架也提供了实现
 
   - AbortPolicy 让调用者抛出 RejectedExecutionException 异常，这是默认策略
   - CallerRunsPolicy 让调用者运行任务
@@ -83,21 +81,245 @@ private static int ctlOf(int rs,int wc){return rs|wc;}
 
 ##### 3）newFixedThreadPool
 
+```java
+public static ExecutorService newFixedThreadPool(int nThreads){
+        return new ThreadPoolExecutor(nThreads,nThreads,
+        0L,TimeUnit.MILLISECONDS,
+        new LinkedBlockingQueue<Runnable>());
+        }
+```
+
+特点
+
+- 核心线程数 == 最大线程数（没有救急线程被创建），因此也无需超时时间
+- 阻塞队列是无界的，可以放任意数量的任务
+
+> **评价**：适用于任务量已知，相对耗时的任务
+
+```java
+ExecutorService executorService=Executors.newFixedThreadPool(10);
+```
+
 ##### 4）newCachedThreadPool
+
+```java
+public static ExecutorService newCachedThreadPool(){
+        return new ThreadPoolExecutor(0,Integer.MAX_VALUE,
+        60L,TimeUnit.SECONDS,
+        new SynchronousQueue<Runnable>());
+        }
+```
+
+特点
+
+- 核心线程数是 0， 最大线程数是 Integer.MAX_VALUE，救急线程的空闲生存时间是 60s，意味着
+
+  - 全部都是救急线程（60s 后可以回收）
+  - 救急线程可以无限创建
+
+- 队列采用了 SynchronousQueue 实现特点是，它没有容量，没有线程来取是放不进去的（一手交钱、一手交货）
+
+  - ```java
+  SynchronousQueue<Integer> synchronousQueue = new SynchronousQueue<>();
+
+            new Thread(() -> {
+                try {
+                    log.info("put 1");
+                    synchronousQueue.put(1);
+                    log.info("put 1 success");
+    
+                    log.info("put 2");
+                    synchronousQueue.put(2);
+                    log.info("put 2 success");
+    
+                    log.info("put 3");
+                    synchronousQueue.put(3);
+                    log.info("put 3 success");
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+            }).start();
+    
+            Thread.sleep(1000);
+    
+            new Thread(() -> {
+                try {
+                    log.info("take");
+                    Integer i = synchronousQueue.take();
+                    log.info("take {} success",i);
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+            }).start();
+    
+            Thread.sleep(1000);
+    
+            new Thread(() -> {
+                try {
+                    log.info("take");
+                    Integer i = synchronousQueue.take();
+                    log.info("take {} success",i);
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+            }).start();
+    
+            Thread.sleep(1000);
+    
+            new Thread(() -> {
+                try {
+                    log.info("take");
+                    Integer i = synchronousQueue.take();
+                    log.info("take {} success",i);
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+            }).start();
+    ```
+
+      输出
+
+      ```java
+      16:04:53.220 [Thread-0] INFO cn.liyohe.juc.chapter8.CachedThreadPoolMain - put 1
+      16:04:54.201 [Thread-1] INFO cn.liyohe.juc.chapter8.CachedThreadPoolMain - take
+      16:04:54.201 [Thread-0] INFO cn.liyohe.juc.chapter8.CachedThreadPoolMain - put 1 success
+      16:04:54.202 [Thread-0] INFO cn.liyohe.juc.chapter8.CachedThreadPoolMain - put 2
+      16:04:54.201 [Thread-1] INFO cn.liyohe.juc.chapter8.CachedThreadPoolMain - take 1 success
+      16:04:55.204 [Thread-2] INFO cn.liyohe.juc.chapter8.CachedThreadPoolMain - take
+      16:04:55.204 [Thread-2] INFO cn.liyohe.juc.chapter8.CachedThreadPoolMain - take 2 success
+      16:04:55.204 [Thread-0] INFO cn.liyohe.juc.chapter8.CachedThreadPoolMain - put 2 success
+      16:04:55.204 [Thread-0] INFO cn.liyohe.juc.chapter8.CachedThreadPoolMain - put 3
+      16:04:56.204 [Thread-3] INFO cn.liyohe.juc.chapter8.CachedThreadPoolMain - take
+      16:04:56.204 [Thread-3] INFO cn.liyohe.juc.chapter8.CachedThreadPoolMain - take 3 success
+      16:04:56.204 [Thread-0] INFO cn.liyohe.juc.chapter8.CachedThreadPoolMain - put 3 success
+      ```
+
+      > **评价**：整个线程池表现为线程数会根据任务量不断增长，没有上限，当任务执行完毕，空闲 1分钟后释放线程。 适合任务数比较密集，但每个任务执行时间较短的情况
 
 ##### 5）newSingleThreadPool
 
+```java
+public static ExecutorService newSingleThreadExecutor(){
+        return new FinalizableDelegatedExecutorService
+        (new ThreadPoolExecutor(1,1,
+        0L,TimeUnit.MILLISECONDS,
+        new LinkedBlockingQueue<Runnable>()));
+        }
+```
+
+使用场景
+
+希望多个任务排队执行。线程数固定为 1，任务数多于 1 时，会放入无界队列排队。任务执行完毕，这唯一的线程也不会被释放。
+
+区别：
+
+- 自己创建一个单线程串行执行任务，如果任务执行失败而终止那么没有任何补救措施，而线程池还会新建一个线程，保证池的正常工作
+- Executors.newSingleThreadExecutor() 线程个数始终为1，不能修改
+  - FinalizableDelegatedExecutorService 应用的是装饰器模式，只对外暴露了 ExecutorService 接口，因此不能调用 ThreadPoolExecutor 中特有的方法
+- xecutors.newFixedThreadPool(1) 初始时为1，以后还可以修改
+  - 对外暴露的是 ThreadPoolExecutor 对象，可以强转后调用 setzhCorePoolSize 等方法进行修改
+
 ##### 6）提交任务
+
+```java
+// 执行任务
+void execute(Runnable command);
+
+// 提交任务 task 用返回值 Future 获得执行结果
+<T> Future<T> submit(Runnable<T> task);
+
+// 提交 Task 中所有任务
+<T> List<Future<T>>invokeAll(Collection<?extends Callable<T>> tasks)
+        throws InterruptedException;
+
+// 提交 Task 中所有任务，带超时时间
+<T> List<Future<T>>invokeAll(Collection<?extends Callable<T>> tasks,
+        long timeout,TimeUnit unit)
+        throws InterruptedException;
+
+// 提交 tasks 中所有任务，哪个任务先成功执行完毕，返回此任务执行结果，其它任务取消
+<T> T invokeAny(Collection<?extends Callable<T>> tasks)
+        throws InterruptedException,ExecutionException;
+
+// 提交 tasks 中所有任务，哪个任务先成功执行完毕，返回此任务执行结果，其它任务取消，带超时时间
+<T> T invokeAny(Collection<?extends Callable<T>> tasks,
+        long timeout,TimeUnit unit)
+        throws InterruptedException,ExecutionException,TimeoutException;
+```
 
 ##### 7）关闭线程池
 
-#####  * 模式-Worker Thread
+**shutdown**
+
+```java
+/*
+线程池状态变为 SHUTDOWN
+- 不会接收新任务
+- 但已提交任务会执行完
+- 此方法不会阻塞调用线程的执行
+*/
+void shutdown();
+```
+
+```java
+public void shutdown(){
+final ReentrantLock mainLock=this.mainLock;
+        mainLock.lock();
+        try{
+        checkShutdownAccess();
+        // 修改线程池状态
+        advanceRunState(SHUTDOWN);
+        // 仅打断空闲线程
+        interruptIdleWorkers();
+        onShutdown(); // hook for ScheduledThreadPoolExecutor
+        }finally{
+        mainLock.unlock();
+        }
+        tryTerminate();
+        }
+```
+
+**shutdownNow**
+
+```java
+/*
+线程池状态变为 STOP
+- 不会接收新任务
+- 会将队列中的任务返回
+- 并用 interrupt 的方式中断正在执行的任务
+*/
+List<Runnable> shutdownNow();
+```
+
+```java
+public List<Runnable> shutdownNow(){
+        List<Runnable> tasks;
+final ReentrantLock mainLock=this.mainLock;
+        mainLock.lock();
+        try{
+        checkShutdownAccess();
+        // 修改线程池状态
+        advanceRunState(STOP);
+        // 打断所有线程
+        interruptWorkers();
+        // 获取队列中剩余的任务
+        tasks=drainQueue();
+        }finally{
+        mainLock.unlock();
+        }
+        // 尝试终结
+        tryTerminate();
+        return tasks;
+        }
+```
+
+#####    * 模式-Worker Thread
 
 ##### 8）任务调度线程池
 
 ##### 9）正确处理执行任务异常
 
-#####  * 应用之定时任务
+#####    * 应用之定时任务
 
 ##### 10）Tomcat线程池
 
