[IMP] 更新 AQS 内容

--- a/docs/并发编程.md
+++ b/docs/并发编程.md
@@ -120,8 +120,8 @@ public static ExecutorService newCachedThreadPool(){
 - 队列采用了 SynchronousQueue 实现特点是，它没有容量，没有线程来取是放不进去的（一手交钱、一手交货）
 
   - ```java
-  SynchronousQueue<Integer> synchronousQueue = new SynchronousQueue<>();
-
+    SynchronousQueue<Integer> synchronousQueue = new SynchronousQueue<>();
+    
             new Thread(() -> {
                 try {
                     log.info("put 1");
@@ -330,4 +330,134 @@ final ReentrantLock mainLock=this.mainLock;
 ##### 2）使用
 
 ### 8.2 J.U.C
+
+#### 1.*AQS原理
+
+##### 1.1概述
+
+全称是 AbstractQueuedSynchronizer，是阻塞式锁和相关的同步器工具的框架
+
+特点：
+
+- 用 state 属性来表示资源的状态（分独占模式和共享模式），子类需要定义如何维护这个状态，控制如何获取
+  锁和释放锁
+  - getState - 获取 state 状态
+  - setState - 设置 state 状态
+  - compareAndSetState - cas 机制设置 state 状态
+  - 独占模式是只有一个线程能够访问资源，而共享模式可以允许多个线程访问资源
+- 提供了基于 FIFO 的等待队列，类似于 Monitor 的 EntryList
+- 条件变量来实现等待、唤醒机制，支持多个条件变量，类似于 Monitor 的 WaitSet
+
+子类主要实现这样一些方法（默认抛出 UnsupportedOperationException）
+
+- tryAcquire
+- tryRelease
+- tryAcquireShared
+- tryReleaseShared
+- isHeldExclusively
+
+获取锁的姿势
+
+```java
+// 如果获取锁失败
+if(!tryAcquire(arg)){
+// 入队, 可以选择阻塞当前线程 park unpark
+        }
+```
+
+释放锁的姿势
+
+```java
+// 如果释放锁成功
+if(tryRelease(arg)){
+// 让阻塞线程恢复运行
+        }
+```
+
+##### 2.2 实现不可重入锁
+
+**自定义同步器**
+
+##### 3.3 心得
+
+###### 起源
+
+​ 早期程序员会自己通过一种同步器去实现另一种相近的同步器，例如用可重入锁去实现信号量，或反之。这显然不够优雅，于是在 JSR166（java 规范提案）中创建了 AQS，提供了这种通用的同步器机制。
+
+###### 目标
+
+AQS 要实现的功能目标
+
+- 阻塞版本获取锁 acquire 和非阻塞的版本尝试获取锁 tryAcquire
+- 获取锁超时机制
+- 通过打断取消机制
+- 独占机制及共享机制
+- 条件不满足时的等待机制
+
+要实现的性能目标
+
+> Instead, the primary performance goal here is scalability: to predictably maintain efficiency even, or
+> especially, when synchronizers are contended
+
+###### 设计
+
+AQS 的基本思想其实很简单
+
+获取锁的逻辑
+
+```java
+while(state 状态不允许获取){
+        if(队列中还没有此线程){
+        入队并阻塞
+        }
+        }
+        当前线程出队
+```
+
+释放锁的逻辑
+
+```java
+if(state 状态允许了){
+        恢复阻塞的线程(s)
+        }
+```
+
+要点
+
+- 原子维护 state 状态
+- 阻塞及恢复线程
+- 维护队列
+
+**1） state 设计**
+
+**2） 阻塞恢复设计**
+
+**3） 队列设计**
+
+**主要用到 AQS 的并发工具类**
+
+#### 2.*ReentranLock原理
+
+#### 3.读写锁
+
+##### 3.1ReentrantReadWriteLock
+
+​ 当读操作远远高于写操作时，这时候使用 `读写锁` 让 `读-读` 可以并发，提高性能。 类似于数据库中的 `select ...from ... lock in share mode`
+​ 提供一个 `数据容器类` 内部分别使用读锁保护数据的 `read()` 方法，写锁保护数据的 `write()` 方法
+
+#### 4.Semaphore
+
+#### 5.CountdownLatch
+
+#### 6.CyclicBarrier
+
+#### 7.线程安全集合类概述
+
+#### 8.ConcurrentHashMap
+
+#### 9.BlockingQueue
+
+#### 10.ConcurrentLinkedQueue
+
+#### 11.CopyOnWriteArrayList
 
