--- a/docs/并发编程.md
+++ b/docs/并发编程.md
@@ -180,18 +180,18 @@ public static ExecutorService newCachedThreadPool(){
       输出
 
       ```java
-      16:04:53.220 [Thread-0] INFO cn.liyohe.juc.chapter8.CachedThreadPoolMain - put 1
-      16:04:54.201 [Thread-1] INFO cn.liyohe.juc.chapter8.CachedThreadPoolMain - take
-      16:04:54.201 [Thread-0] INFO cn.liyohe.juc.chapter8.CachedThreadPoolMain - put 1 success
-      16:04:54.202 [Thread-0] INFO cn.liyohe.juc.chapter8.CachedThreadPoolMain - put 2
-      16:04:54.201 [Thread-1] INFO cn.liyohe.juc.chapter8.CachedThreadPoolMain - take 1 success
-      16:04:55.204 [Thread-2] INFO cn.liyohe.juc.chapter8.CachedThreadPoolMain - take
-      16:04:55.204 [Thread-2] INFO cn.liyohe.juc.chapter8.CachedThreadPoolMain - take 2 success
-      16:04:55.204 [Thread-0] INFO cn.liyohe.juc.chapter8.CachedThreadPoolMain - put 2 success
-      16:04:55.204 [Thread-0] INFO cn.liyohe.juc.chapter8.CachedThreadPoolMain - put 3
-      16:04:56.204 [Thread-3] INFO cn.liyohe.juc.chapter8.CachedThreadPoolMain - take
-      16:04:56.204 [Thread-3] INFO cn.liyohe.juc.chapter8.CachedThreadPoolMain - take 3 success
-      16:04:56.204 [Thread-0] INFO cn.liyohe.juc.chapter8.CachedThreadPoolMain - put 3 success
+      16:04:53.220 [Thread-0] INFO cn.liyohe.juc.chapter8.threadpool.CachedThreadPoolMain - put 1
+      16:04:54.201 [Thread-1] INFO cn.liyohe.juc.chapter8.threadpool.CachedThreadPoolMain - take
+      16:04:54.201 [Thread-0] INFO cn.liyohe.juc.chapter8.threadpool.CachedThreadPoolMain - put 1 success
+      16:04:54.202 [Thread-0] INFO cn.liyohe.juc.chapter8.threadpool.CachedThreadPoolMain - put 2
+      16:04:54.201 [Thread-1] INFO cn.liyohe.juc.chapter8.threadpool.CachedThreadPoolMain - take 1 success
+      16:04:55.204 [Thread-2] INFO cn.liyohe.juc.chapter8.threadpool.CachedThreadPoolMain - take
+      16:04:55.204 [Thread-2] INFO cn.liyohe.juc.chapter8.threadpool.CachedThreadPoolMain - take 2 success
+      16:04:55.204 [Thread-0] INFO cn.liyohe.juc.chapter8.threadpool.CachedThreadPoolMain - put 2 success
+      16:04:55.204 [Thread-0] INFO cn.liyohe.juc.chapter8.threadpool.CachedThreadPoolMain - put 3
+      16:04:56.204 [Thread-3] INFO cn.liyohe.juc.chapter8.threadpool.CachedThreadPoolMain - take
+      16:04:56.204 [Thread-3] INFO cn.liyohe.juc.chapter8.threadpool.CachedThreadPoolMain - take 3 success
+      16:04:56.204 [Thread-0] INFO cn.liyohe.juc.chapter8.threadpool.CachedThreadPoolMain - put 3 success
       ```
 
       > **评价**：整个线程池表现为线程数会根据任务量不断增长，没有上限，当任务执行完毕，空闲 1分钟后释放线程。 适合任务数比较密集，但每个任务执行时间较短的情况
@@ -313,19 +313,75 @@ final ReentrantLock mainLock=this.mainLock;
         }
 ```
 
-#####    * 模式-Worker Thread
+#####     * 模式-Worker Thread
+
+###### 1. 定义
+
+​ 让有限的工作线程（Worker Thread）来轮流异步处理无限多的任务。也可以将其归类为分工模式，它的典型实现 就是线程池，也体现了经典设计模式中的享元模式。
+
+​ 例如，海底捞的服务员（线程），轮流处理每位客人的点餐（任务），如果为每位客人都配一名专属的服务员，那 么成本就太高了（对比另一种多线程设计模式：Thread-Per-Message）
+
+​ 注意，不同任务类型应该使用不同的线程池，这样能够避免饥饿，并能提升效率
+
+​ 例如，如果一个餐馆的工人既要招呼客人（任务类型A），又要到后厨做菜（任务类型B）显然效率不咋地，分成 服务员（线程池A）与厨师（线程池B）更为合理，当然你能想到更细致的分工
+
+###### 2.饥饿
+
+​ 固定大小线程池会有饥饿现象
+
+- 两个工人是同一个线程池中的两个线程
+- 他们要做的事情是：为客人点餐和到后厨做菜，这是两个阶段的工作
+  - 客人点餐：必须先点完餐，等菜做好，上菜，在此期间处理点餐的工人必须等待
+  - 后厨做菜：没啥说的，做就是了
+- 比如工人A 处理了点餐任务，接下来它要等着 工人B 把菜做好，然后上菜，他俩也配合的蛮好
+- 但现在同时来了两个客人，这个时候工人A 和工人B 都去处理点餐了，这时没人做饭了，饥饿
+
+###### 3.创建多少线程池合适
+
+- 过小会导致程序不能充分地利用系统资源、容易导致饥饿
+- 过大会导致更多的线程上下文切换，占用更多内存
+
+**3.1 CPU 密集型运算**
+
+​ 通常采用 `cpu 核数 + 1` 能够实现最优的 CPU 利用率，+1 是保证当线程由于页缺失故障（操作系统）或其它原因 导致暂停时，额外的这个线程就能顶上去，保证 CPU 时钟周期不被浪费
+
+**3.2 I/O 密集型运算**
+
+​ CPU 不总是处于繁忙状态，例如，当你执行业务计算时，这时候会使用 CPU 资源，但当你执行 I/O 操作时、远程 RPC 调用时，包括进行数据库操作时，这时候 CPU 就闲下来了，你可以利用多线程提高它的利用率。
+
+经验公式如下
+
+​    `线程数 = 核数 * 期望 CPU 利用率 * 总时间(CPU计算时间+等待时间) / CPU 计算时间`
+
+例如 4 核 CPU 计算时间是 50% ，其它等待时间是 50%，期望 cpu 被 100% 利用，套用公式
+
+​    `4 * 100% * 100% / 50% = 8`
+
+例如 4 核 CPU 计算时间是 10% ，其它等待时间是 90%，期望 cpu 被 100% 利用，套用公式
+
+​    `4 * 100% * 100% / 10% = 40`
+
+###### 4.自定义线程池
 
 ##### 8）任务调度线程池
 
 ##### 9）正确处理执行任务异常
 
-#####    * 应用之定时任务
+#####     * 应用之定时任务
 
 ##### 10）Tomcat线程池
 
 #### 3.Fork/Join
 
 ##### 1）概念
+
+​ Fork/Join 是 JDK 1.7 加入的新的线程池实现，它体现的是一种分治思想，适用于能够进行任务拆分的 cpu 密集型 运算
+
+​ 所谓的任务拆分，是将一个大任务拆分为算法上相同的小任务，直至不能拆分可以直接求解。跟递归相关的一些计 算，如归并排序、斐波那契数列、都可以用分治思想进行求解
+
+​ Fork/Join 在分治的基础上加入了多线程，可以把每个任务的分解和合并交给不同的线程来完成，进一步提升了运 算效率
+
+​ Fork/Join 默认会创建与 cpu 核心数大小相同的线程池
 
 ##### 2）使用
 
@@ -362,7 +418,7 @@ final ReentrantLock mainLock=this.mainLock;
 // 如果获取锁失败
 if(!tryAcquire(arg)){
 // 入队, 可以选择阻塞当前线程 park unpark
-        }
+}
 ```
 
 释放锁的姿势
@@ -382,7 +438,7 @@ if(tryRelease(arg)){
 
 ###### 起源
 
-​ 早期程序员会自己通过一种同步器去实现另一种相近的同步器，例如用可重入锁去实现信号量，或反之。这显然不够优雅，于是在 JSR166（java 规范提案）中创建了 AQS，提供了这种通用的同步器机制。
+早期程序员会自己通过一种同步器去实现另一种相近的同步器，例如用可重入锁去实现信号量，或反之。这显然不够优雅，于是在 JSR166（java 规范提案）中创建了 AQS，提供了这种通用的同步器机制。
 
 ###### 目标
 
@@ -438,11 +494,37 @@ if(state 状态允许了){
 
 #### 2.*ReentranLock原理
 
+##### 1.非公平锁实现原理
+
+###### 加锁解锁流程
+
+###### 加锁源码
+
+###### 解锁源码
+
+##### 2.可重入原理
+
+##### 3.可打断原理
+
+###### 不可打断模式
+
+###### 可打断模式
+
+##### 4.公平锁实现原理
+
+##### 5.条件变量实现原理
+
+###### await 流程
+
+###### signal 流程
+
+###### 源码
+
 #### 3.读写锁
 
 ##### 3.1ReentrantReadWriteLock
 
-​ 当读操作远远高于写操作时，这时候使用 `读写锁` 让 `读-读` 可以并发，提高性能。 类似于数据库中的 `select ...from ... lock in share mode`
+当读操作远远高于写操作时，这时候使用 `读写锁` 让 `读-读` 可以并发，提高性能。 类似于数据库中的 `select ...from ... lock in share mode`
 ​ 提供一个 `数据容器类` 内部分别使用读锁保护数据的 `read()` 方法，写锁保护数据的 `write()` 方法
 
 #### 4.Semaphore
