[ADD] 添加 读写锁内容

--- a/docs/并发编程.md
+++ b/docs/并发编程.md
@@ -317,17 +317,17 @@ final ReentrantLock mainLock=this.mainLock;
 
 ###### 1. 定义
 
-​ 让有限的工作线程（Worker Thread）来轮流异步处理无限多的任务。也可以将其归类为分工模式，它的典型实现 就是线程池，也体现了经典设计模式中的享元模式。
+ 让有限的工作线程（Worker Thread）来轮流异步处理无限多的任务。也可以将其归类为分工模式，它的典型实现 就是线程池，也体现了经典设计模式中的享元模式。
 
-​ 例如，海底捞的服务员（线程），轮流处理每位客人的点餐（任务），如果为每位客人都配一名专属的服务员，那 么成本就太高了（对比另一种多线程设计模式：Thread-Per-Message）
+例如，海底捞的服务员（线程），轮流处理每位客人的点餐（任务），如果为每位客人都配一名专属的服务员，那 么成本就太高了（对比另一种多线程设计模式：Thread-Per-Message）
 
-​ 注意，不同任务类型应该使用不同的线程池，这样能够避免饥饿，并能提升效率
+注意，不同任务类型应该使用不同的线程池，这样能够避免饥饿，并能提升效率
 
-​ 例如，如果一个餐馆的工人既要招呼客人（任务类型A），又要到后厨做菜（任务类型B）显然效率不咋地，分成 服务员（线程池A）与厨师（线程池B）更为合理，当然你能想到更细致的分工
+例如，如果一个餐馆的工人既要招呼客人（任务类型A），又要到后厨做菜（任务类型B）显然效率不咋地，分成 服务员（线程池A）与厨师（线程池B）更为合理，当然你能想到更细致的分工
 
 ###### 2.饥饿
 
-​ 固定大小线程池会有饥饿现象
+固定大小线程池会有饥饿现象
 
 - 两个工人是同一个线程池中的两个线程
 - 他们要做的事情是：为客人点餐和到后厨做菜，这是两个阶段的工作
@@ -343,11 +343,11 @@ final ReentrantLock mainLock=this.mainLock;
 
 **3.1 CPU 密集型运算**
 
-​ 通常采用 `cpu 核数 + 1` 能够实现最优的 CPU 利用率，+1 是保证当线程由于页缺失故障（操作系统）或其它原因 导致暂停时，额外的这个线程就能顶上去，保证 CPU 时钟周期不被浪费
+通常采用 `cpu 核数 + 1` 能够实现最优的 CPU 利用率，+1 是保证当线程由于页缺失故障（操作系统）或其它原因 导致暂停时，额外的这个线程就能顶上去，保证 CPU 时钟周期不被浪费
 
 **3.2 I/O 密集型运算**
 
-​ CPU 不总是处于繁忙状态，例如，当你执行业务计算时，这时候会使用 CPU 资源，但当你执行 I/O 操作时、远程 RPC 调用时，包括进行数据库操作时，这时候 CPU 就闲下来了，你可以利用多线程提高它的利用率。
+CPU 不总是处于繁忙状态，例如，当你执行业务计算时，这时候会使用 CPU 资源，但当你执行 I/O 操作时、远程 RPC 调用时，包括进行数据库操作时，这时候 CPU 就闲下来了，你可以利用多线程提高它的利用率。
 
 经验公式如下
 
@@ -375,13 +375,13 @@ final ReentrantLock mainLock=this.mainLock;
 
 ##### 1）概念
 
-​ Fork/Join 是 JDK 1.7 加入的新的线程池实现，它体现的是一种分治思想，适用于能够进行任务拆分的 cpu 密集型 运算
+Fork/Join 是 JDK 1.7 加入的新的线程池实现，它体现的是一种分治思想，适用于能够进行任务拆分的 cpu 密集型 运算
 
-​ 所谓的任务拆分，是将一个大任务拆分为算法上相同的小任务，直至不能拆分可以直接求解。跟递归相关的一些计 算，如归并排序、斐波那契数列、都可以用分治思想进行求解
+所谓的任务拆分，是将一个大任务拆分为算法上相同的小任务，直至不能拆分可以直接求解。跟递归相关的一些计 算，如归并排序、斐波那契数列、都可以用分治思想进行求解
 
-​ Fork/Join 在分治的基础上加入了多线程，可以把每个任务的分解和合并交给不同的线程来完成，进一步提升了运 算效率
+Fork/Join 在分治的基础上加入了多线程，可以把每个任务的分解和合并交给不同的线程来完成，进一步提升了运 算效率
 
-​ Fork/Join 默认会创建与 cpu 核心数大小相同的线程池
+Fork/Join 默认会创建与 cpu 核心数大小相同的线程池
 
 ##### 2）使用
 
@@ -524,16 +524,133 @@ if(state 状态允许了){
 
 ##### 3.1ReentrantReadWriteLock
 
-当读操作远远高于写操作时，这时候使用 `读写锁` 让 `读-读` 可以并发，提高性能。 类似于数据库中的 `select ...from ... lock in share mode`
+​ 当读操作远远高于写操作时，这时候使用 `读写锁` 让 `读-读` 可以并发，提高性能。 类似于数据库中的 `select ...from ... lock in share mode`
+
 ​ 提供一个 `数据容器类` 内部分别使用读锁保护数据的 `read()` 方法，写锁保护数据的 `write()` 方法
+
+###### 注意事项
+
+- 读锁不支持条件变量
+- 重入时升级不支持：即持有读锁的情况下去获取写锁，会导致获取写锁永久等待
+- 重入时降级支持：即持有写锁的情况下去获取读锁
+
+###### 应用之缓存
+
+1. **缓存更新策略**
+
+更新时，是先清缓存还是先更新数据库
+
+![image-20220630164645766](./images/image-20220630164645766.png)
+
+先清缓存
+
+![image-20220630164725480](./images/image-20220630164725480.png)
+
+先更新数据库
+
+![image-20220630164758040](./images/image-20220630164758040.png)
+
+补充一种情况，假设查询线程 A 查询数据时恰好缓存数据由于时间到期失效，或是第一次查询
+
+这种情况的出现几率非常小，见 facebook 论文
+
+2. **读写锁实现一致性缓存**
+
+​ 使用读写锁实现一个简单的按需加载缓存
+
+```java
+
+```
+
+> **注意**
+>
+> - 以上实现体现的是读写锁的应用，保证缓存和数据库的一致性，但有下面的问题没有考虑
+    >
+- 适合读多写少，如果写操作比较频繁，以上实现性能低
+>     - 没有考虑缓存容量
+>     - 没有考虑缓存过期
+>     - 只适合单机
+>     - 并发性还是低，目前只会用一把锁
+>     - 更新方法太过简单粗暴，清空了所有 key（考虑按类型分区或重新设计 key）
+> - 乐观锁实现：用 CAS 去更新
+
+###### 读写锁原理
+
+##### 3.2 StampedLock
+
+​ 该类自 JDK 8 加入，是为了进一步优化读性能，它的特点是在使用读锁、写锁时都必须配合【戳】使用 加解读锁
+
+​
+
+
+
+> **注意**
+>
+> - StampedLock 不支持条件变量
+> - StampedLock 不支持可重入
 
 #### 4.Semaphore
 
+##### 基本使用
+
+​    [ˈsɛməˌfɔr] 信号量，用来限制能同时访问共享资源的线程上限。
+
+##### \* Semaphore 应用
+
+##### \* Semaphore 原理
+
 #### 5.CountdownLatch
+
+​ 用来进行线程同步协作，等待所有线程完成倒计时。
+
+​ 其中构造参数用来初始化等待计数值，await() 用来等待计数归零，countDown() 用来让计数减一
+
+​ 可以配合线程池使用，改进如下
+
+##### \* 应用之同步等待多线程准备完毕
+
+##### \* 应用之同步等待多个远程调用结束
 
 #### 6.CyclicBarrier
 
+​    [ˈsaɪklɪk ˈbæriɚ] 循环栅栏，用来进行线程协作，等待线程满足某个计数。构造时设置『计数个数』，每个线程执 行到某个需要“同步”的时刻调用 await() 方法进行等待，当等待的线程数满足『计数个数』时，继续执行
+
+
+
+> **注意**
+>
+> ​ CyclicBarrier 与 CountDownLatch 的主要区别在于 CyclicBarrier 是可以重用的 CyclicBarrier 可以被比 喻为『人满发车』
+
 #### 7.线程安全集合类概述
+
+线程安全集合类可以分为三大类：
+
+- 遗留的线程安全集合如 `Hashtable` ， `Vector`
+- 使用 Collections 装饰的线程安全集合，如：
+  - `Collections.synchronizedCollection`
+  - `Collections.synchronizedList`
+  - `Collections.synchronizedMap`
+  - `Collections.synchronizedSet`
+  - `Collections.synchronizedNavigableMap`
+  - `Collections.synchronizedNavigableSet`
+  - `Collections.synchronizedSortedMap`
+  - `Collections.synchronizedSortedSet`
+- `java.util.concurrent.*`
+
+重点介绍 `java.util.concurrent.*` 下的线程安全集合类，可以发现它们有规律，里面包含三类关键词： `Blocking`、`CopyOnWrite`、`Concurrent`
+
+- `Blocking`  大部分实现基于锁，并提供用来阻塞的方法
+- `CopyOnWrite` 之类容器修改开销相对较重
+- `Concurrent` 类型的容器
+  - 内部很多操作使用 cas 优化，一般可以提供较高吞吐量
+  - 弱一致性
+    - 遍历时弱一致性，例如，当利用迭代器遍历时，如果容器发生修改，迭代器仍然可以继续进行遍 历，这时内容是旧的
+    - 求大小弱一致性，size 操作未必是 100% 准确
+    - 读取弱一致性
+
+> **注意**
+>
+> 遍历时如果发生了修改，对于非安全容器来讲，使用 fail-fast 机制也就是让遍历立刻失败，抛出 ConcurrentModificationException，不再继续遍历
 
 #### 8.ConcurrentHashMap
 
