--- a/docs/并发编程.md
+++ b/docs/并发编程.md
@@ -319,7 +319,7 @@ final ReentrantLock mainLock=this.mainLock;
 
  让有限的工作线程（Worker Thread）来轮流异步处理无限多的任务。也可以将其归类为分工模式，它的典型实现 就是线程池，也体现了经典设计模式中的享元模式。
 
-例如，海底捞的服务员（线程），轮流处理每位客人的点餐（任务），如果为每位客人都配一名专属的服务员，那 么成本就太高了（对比另一种多线程设计模式：Thread-Per-Message）
+ 例如，海底捞的服务员（线程），轮流处理每位客人的点餐（任务），如果为每位客人都配一名专属的服务员，那 么成本就太高了（对比另一种多线程设计模式：Thread-Per-Message）
 
 注意，不同任务类型应该使用不同的线程池，这样能够避免饥饿，并能提升效率
 
@@ -566,7 +566,9 @@ if(state 状态允许了){
 >
 > - 以上实现体现的是读写锁的应用，保证缓存和数据库的一致性，但有下面的问题没有考虑
     >
+
 - 适合读多写少，如果写操作比较频繁，以上实现性能低
+
 >     - 没有考虑缓存容量
 >     - 没有考虑缓存过期
 >     - 只适合单机
@@ -575,6 +577,35 @@ if(state 状态允许了){
 > - 乐观锁实现：用 CAS 去更新
 
 ###### 读写锁原理
+
+**1.图解流程**
+
+读写锁用的是同一个 Sycn 同步器，因此等待队列、state 等也是同一个
+
+**t1 w.lock，t2 r.lock**
+
+1） t1 成功上锁，流程与 ReentrantLock 加锁相比没有特殊之处，不同是写锁状态占了 state 的低 16 位，而读锁 使用的是 state 的高 16 位
+
+![image-20220630171706742](./images/image-20220630171706742.png)
+
+2）t2 执行 r.lock，这时进入读锁的 sync.acquireShared(1) 流程，首先会进入 tryAcquireShared 流程。如果有写 锁占据，那么 tryAcquireShared 返回 -1 表示失败
+
+> **tryAcquireShared 返回值表示**
+>
+> - -1 表示失败
+> - 0 表示成功，但后继节点不会继续唤醒
+> - 正数表示成功，而且数值是还有几个后继节点需要唤醒，读写锁返回 1
+
+![image-20220630172125723](./images/image-20220630172125723.png)
+
+3）这时会进入 sync.doAcquireShared(1) 流程，首先也是调用 addWaiter 添加节点，不同之处在于节点被设置为 Node.SHARED 模式而非 Node.EXCLUSIVE 模式，注意此时 t2 仍处于活跃状态
+
+![image-20220630173127615](./images/image-20220630173127615.png)
+
+4）t2 会看看自己的节点是不是老二，如果是，还会再次调用 tryAcquireShared(1) 来尝试获取锁
+
+5）如果没有成功，在 doAcquireShared 内 for (;;) 循环一次，把前驱节点的 waitStatus 改为 -1，再 for (;;) 循环一 次尝试 tryAcquireShared(1) 如果还不成功，那么在
+parkAndCheckInterrupt() 处 park
 
 ##### 3.2 StampedLock
 
