--- a/docs/并发编程.md
+++ b/docs/并发编程.md
@@ -524,9 +524,9 @@ if(state 状态允许了){
 
 ##### 3.1ReentrantReadWriteLock
 
-​ 当读操作远远高于写操作时，这时候使用 `读写锁` 让 `读-读` 可以并发，提高性能。 类似于数据库中的 `select ...from ... lock in share mode`
+当读操作远远高于写操作时，这时候使用 `读写锁` 让 `读-读` 可以并发，提高性能。 类似于数据库中的 `select ...from ... lock in share mode`
 
-​ 提供一个 `数据容器类` 内部分别使用读锁保护数据的 `read()` 方法，写锁保护数据的 `write()` 方法
+提供一个 `数据容器类` 内部分别使用读锁保护数据的 `read()` 方法，写锁保护数据的 `write()` 方法
 
 ###### 注意事项
 
@@ -556,7 +556,7 @@ if(state 状态允许了){
 
 2. **读写锁实现一致性缓存**
 
-​ 使用读写锁实现一个简单的按需加载缓存
+使用读写锁实现一个简单的按需加载缓存
 
 ```java
 
@@ -564,16 +564,14 @@ if(state 状态允许了){
 
 > **注意**
 >
-> - 以上实现体现的是读写锁的应用，保证缓存和数据库的一致性，但有下面的问题没有考虑
+> - 以上实现体现的是读写锁的应用，保证缓存和数据库的一致性，但有下面的问题没有考虑到
     >
-
 - 适合读多写少，如果写操作比较频繁，以上实现性能低
-
->     - 没有考虑缓存容量
->     - 没有考虑缓存过期
->     - 只适合单机
->     - 并发性还是低，目前只会用一把锁
->     - 更新方法太过简单粗暴，清空了所有 key（考虑按类型分区或重新设计 key）
+>      - 没有考虑缓存容量
+>      - 没有考虑缓存过期
+>      - 只适合单机
+>      - 并发性还是低，目前只会用一把锁
+>      - 更新方法太过简单粗暴，清空了所有 key（考虑按类型分区或重新设计 key）
 > - 乐观锁实现：用 CAS 去更新
 
 ###### 读写锁原理
@@ -609,9 +607,9 @@ parkAndCheckInterrupt() 处 park
 
 ##### 3.2 StampedLock
 
-​ 该类自 JDK 8 加入，是为了进一步优化读性能，它的特点是在使用读锁、写锁时都必须配合【戳】使用 加解读锁
+该类自 JDK 8 加入，是为了进一步优化读性能，它的特点是在使用读锁、写锁时都必须配合【戳】使用 加解读锁
 
-​
+
 
 
 
@@ -632,11 +630,11 @@ parkAndCheckInterrupt() 处 park
 
 #### 5.CountdownLatch
 
-​ 用来进行线程同步协作，等待所有线程完成倒计时。
+用来进行线程同步协作，等待所有线程完成倒计时。
 
-​ 其中构造参数用来初始化等待计数值，await() 用来等待计数归零，countDown() 用来让计数减一
+其中构造参数用来初始化等待计数值，await() 用来等待计数归零，countDown() 用来让计数减一
 
-​ 可以配合线程池使用，改进如下
+可以配合线程池使用，改进如下
 
 ##### \* 应用之同步等待多线程准备完毕
 
@@ -650,7 +648,7 @@ parkAndCheckInterrupt() 处 park
 
 > **注意**
 >
-> ​ CyclicBarrier 与 CountDownLatch 的主要区别在于 CyclicBarrier 是可以重用的 CyclicBarrier 可以被比 喻为『人满发车』
+>  CyclicBarrier 与 CountDownLatch 的主要区别在于 CyclicBarrier 是可以重用的 CyclicBarrier 可以被比 喻为『人满发车』
 
 #### 7.线程安全集合类概述
 
