--- a/docs/线程池.md
+++ b/docs/线程池.md
@@ -4,7 +4,7 @@
 
 ## 2.ThreadPoolExecutor
 
-![image-20220603213115117](./images/image-20220603213115117.png)
+![threadpool-executor-classmap](./images/threadpool-executor-classmap.png)
 
 ### 1）线程池状态
 
@@ -50,7 +50,7 @@ private static int ctlOf(int rs,int wc){return rs|wc;}
 
 工作方式：
 
-![image-20220603221234446](./images/image-20220603221234446.png)
+![threadpool-executor-worktype](./images/threadpool-executor-worktype.png)
 
 - 线程池中刚开始没有线程，当一个任务提交给线程池后，线程池会创建一个新线程来执行任务。
 
@@ -71,7 +71,7 @@ private static int ctlOf(int rs,int wc){return rs|wc;}
 
 - 当高峰过去后，超过corePoolSize 的救急线程如果一段时间没有任务做，需要结束节省资源，这个时间由keepAliveTime 和 unit 来控制。
 
-  ![image-20220603222838520](./images/image-20220603222838520.png)
+  ![threadpool-executor-rejectedhander-classmap](./images/threadpool-executor-rejectedhander-classmap.png)
 
   根据这个构造方法，JDK Executors 类中提供了众多工厂方法来创建各种用途的线程池
 
